Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/multicatch/Neg04.out
Neg04.java:27:13: compiler.err.unreported.exception.need.to.catch.or.throw: java.lang.Exception
1 error
